--- a/king-admin/src/main/resources/application.yml
+++ b/king-admin/src/main/resources/application.yml
@@ -7,6 +7,10 @@ pagehelper:
   helper-dialect: mysql
 
 spring:
+  servlet:
+    multipart:
+      max-file-size: 500MB
+      max-request-size: 500MB
   devtools:
     restart:
       enabled: true
