--- a/infinite/pom.xml
+++ b/infinite/pom.xml
@@ -10,6 +10,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>infinite</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.king</groupId>
+            <artifactId>king-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 
 </project>
